apps/production/coder_http_redir.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: coder
spec:
  rules:
    - host: coder.notmet.net
