apps/production/freshrss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: freshrss
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - "freshrss.notmet.net"
    secretName: freshrss-tls
  rules:
  - host: freshrss.notmet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-redirect
  namespace: freshrss
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: freshrss-redirect@kubernetescrd
spec:
  rules:
  - host: freshrss.notmet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port:
              number: 80
