apps/production/funkwhale_http_redir.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: funkwhale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: funkwhale-redirect@kubernetescrd
spec:
  rules:
    - host: music.notmet.net
      http:
        paths:
          - backend:
              service:
                name: funkwhale
                port:
                  number: 80
            path: /
            pathType: Prefix
