apps/production/karakeep-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-web-ingress
  namespace: karakeep
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: karakeep-karakeep-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - "karakeep.notmet.net"
    secretName: karakeep-tls
  rules:
  - host: "karakeep.notmet.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "web"
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-redirect
  namespace: karakeep
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: karakeep-karakeep-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: "karakeep.notmet.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
