apps/production/ttrss_http_redir.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: ttrss
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ttrss-redirect@kubernetescrd
spec:
  rules:
    - host: reader.notmet.net
      http:
        paths:
          - backend:
              service:
                name: ttrss
                port:
                  number: 80
            path: /
            pathType: Prefix
